--- a/TrinhTest/Views/Pages/Dash/Dash_Master.cshtml
+++ b/TrinhTest/Views/Pages/Dash/Dash_Master.cshtml
@@ -49,18 +49,18 @@
                             <div class="row">
                                 <div class="col-8">
                                     <div class="numbers">
-                                        <p class="text-sm mb-0 text-capitalize font-weight-bold">User Number Accessing</p>
+                                        <p class="text-sm mb-0 text-capitalize font-weight-bold">Price Services</p>
                                         <h5 class="font-weight-bolder mb-0">
-                                            <span id="Dash_User_Number_Accessing" countto="123"></span>
+                                            <span id="Dash_Price_Services_Accessing" countto="123"></span>
                                             <span class="text-success text-sm font-weight-bolder">
-                                                55%
+                                                VND
                                             </span>
                                         </h5>
                                     </div>
                                 </div>
                                 <div class="col-4 d-flex justify-content-end">
                                     <div class="icon icon-shape bg-gradient-primary shadow text-center border-radius-md">
-                                        <i class="fa fa-users text-lg opacity-10" aria-hidden="true"></i>
+                                        <i class="fa fa-money text-lg opacity-10" aria-hidden="true"></i>
                                     </div>
                                 </div>
                             </div>
@@ -68,61 +68,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row mt-4">
-                <div class="col-12 col-lg-10">
-                    <div class="card ">
-                        <div class="card-header pb-0 p-3">
-                            <div class="d-flex justify-content-between">
-                                <h6 class="mb-2">Price Services</h6>
-                                <div class="d-flex">
-                                    <h6 class="mb-2" id="Dash_SumCountPrice" countto="">
-                                    </h6>
-                                    <span class="ms-2">  VNĐ</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="m-0 my-3 mobile-responsive">
-                            <table id="dtContentPriceServices" class="table vt-table mb-0">
-                                <thead class="hiddenCollapse">
-                                    <tr role="row">
-                                        <th class="d-none">ID</th>
-                                        <th data-languagestatic="no">#</th>
-                                        <th data-languagestatic="Image">Image</th>
-                                        <th data-languagestatic="name">Tên</th>
-                                        <th data-languagestatic="Price">Giá</th>
-                                        <th data-languagestatic="CreateDate">Ngày Tạo</th>
-                                    </tr>
-                                </thead>
-                                <tbody data-languagedyn="grid" id="dtContentPriceServicesBody">
-                                </tbody>
-                            </table>
-                            <div class="dataTable-bottom">
-                                <div class="dataTable-info">Showing 1 to <span id="CountShow">6</span> of <span id="SumCountPagin">12</span> entries</div>
-                                <nav class="dataTable-pagination">
-                                    <ul class="dataTable-pagination-list">
-                                        <li class="pager">
-                                            <a href="#" data-page="1">
-                                                ‹
-                                            </a>
-                                        </li>
-                                        <li class="active">
-                                            <a href="#" data-page="1">1</a>
-                                        </li>
-                                        <li class="">
-                                            <a href="#" data-page="2">2</a>
-                                        </li>
-                                        <li class="">
-                                            <a href="#" data-page="3">3</a>
-                                        </li>
-                                        <li class="pager">
-                                            <a href="#" data-page="2">›</a>
-                                        </li>
-                                    </ul>
-                                </nav>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+            <div id="DashPriceServices">
             </div>
         </div>
     </div>
@@ -185,35 +131,7 @@
                     ,"Img":""
                     ,"Url":""
                   }
-                  ,{"Name":"Users"
-                    ,"ChildNode":[{
-                        "Name":"Reports"
-                        ,"ChildNode":[]
-                        ,"Url":""
-                    },
-                    {
-                        "Name":"New User"
-                        ,"ChildNode":[]
-                        ,"Url":""
-                    }
-                    ]
-                  }
                   ,{"Name":"Account"
-                    ,"ChildNode":[]
-                    ,"Img":""
-                    ,"Url":""
-                  }
-                  ,{"Name":"Settings"
-                    ,"ChildNode":[]
-                    ,"Img":""
-                    ,"Url":""
-                  }
-                  ,{"Name":"Billing"
-                    ,"ChildNode":[]
-                    ,"Img":""
-                    ,"Url":""
-                  }
-                  ,{"Name":"Invoice"
                     ,"ChildNode":[]
                     ,"Img":""
                     ,"Url":""
@@ -223,17 +141,17 @@
                     ,"Img":""
                     ,"Url":""
                   }
-                  ,{"Name":"Projects"
+                  ,{"Name":"Settings"
                     ,"ChildNode":[
                         {
-                        "Name":"General"
+                        "Name":"Languages"
                         ,"ChildNode":[]
-                        ,"Url":"@Url.Action("RoleUser","Home")"
+                        ,"Url":"@Url.Action("Languages","Settings")"
                         },
                         {
-                            "Name":"New User"
+                            "Name":"Price Services"
                             ,"ChildNode":[]
-                            ,"Url":"@Url.Action("RoleUser","Home")"
+                            ,"Url":"@Url.Action("PriceServices","Settings")"
                         }
                         ,
                         {
@@ -247,40 +165,6 @@
                             ,"Url":"@Url.Action("RoleUser","Home")"
                         }
                       ]
-                    ,"Img":""
-                    ,"Url":""
-                  }
-                  ,{"Name":"Pricing Page"
-                    ,"ChildNode":[]
-                    ,"Img":""
-                  }
-                  ,{"Name":"Messages"
-                    ,"ChildNode":[]
-                    ,"Img":""
-                    ,"Url":""
-                  }
-                  ,{"Name":"RTL"
-                    ,"ChildNode":[]
-                    ,"Img":""
-                    ,"Url":""
-                  }
-                   ,{"Name":"Widgets"
-                    ,"ChildNode":[]
-                    ,"Img":""
-                    ,"Url":""
-                  }
-                  ,{"Name":"Charts"
-                    ,"ChildNode":[]
-                    ,"Img":""
-                    ,"Url":""
-                  }
-                  ,{"Name":"Sweet Alerts"
-                    ,"ChildNode":[]
-                    ,"Img":""
-                    ,"Url":""
-                  }
-                  ,{"Name":"Notifications"
-                    ,"ChildNode":[]
                     ,"Img":""
                     ,"Url":""
                   }
@@ -431,13 +315,22 @@
     let body = document.getElementsByTagName('body')[0];
     let className = 'g-sidenav-pinned';
     $(document).ready(function (){
+        let idSumCoun="Dash_Price_Services_Accessing";
         ShowMenuMater();
         CloseMneuMater();
        LoadMenuMater("sidenav-collapse-main");
        DashMasterCountUpNumber('Dash_User_Number_Accessing');
         $("#Layout_EditUser").addClass('active');
          $("#Dashboards").addClass('show');
-        var ele=document.querySelectorAll('.settingCollapse');
+         eleClickMenuDash();
+        LoadDataPriceServices();
+         if (document.getElementById(idSumCoun).hasAttribute("countTo")) {
+                     document.getElementById(idSumCoun).setAttribute("countTo", localStorage.getItem("X-SumPrice"));
+                     DashMasterCountUpNumber(idSumCoun);
+             };
+    });
+    function eleClickMenuDash(){
+         var ele=document.querySelectorAll('.settingCollapse');
         ele.forEach((node) => {
             node.addEventListener("click", e => {
             removeActive(ele);
@@ -461,11 +354,10 @@
             $("#"+"Layout_"+e.target.children[1].innerText).addClass("show");
             document.getElementById(e.target.id).classList.add('active');
             $("#MainRenderBody").html('');
-            $("#MainRenderBody").load("@Url.Action("LoadFriendChat","Messages")");
+            $("#MainRenderBody").load("@Url.Action("PriceServices","Settings")");
             })
         });
-        LoadataPriceServices();
-    });
+    }
     function DashMasterCountUpNumber(id){
         if (document.getElementById(id)) {
           const countUp = new CountUp(id, document.getElementById(id).getAttribute("countTo"));
@@ -575,55 +467,10 @@
         iconSidenav.classList.remove('d-none');
         }
     };
-    function LoadataPriceServices(){
-           AjaxLoad(url = "/api/PriceServices/LoadPriceServices"
-            ,data= JSON.stringify({
-                Pagination:0
-            })
-            ,async = true
-            , error = function () { notiError_SW() }
-            , success = function (result) {
-                if (result != null && result!='') {
-                    data=JSON.parse(result);
-                   document.getElementById("SumCountPagin").innerHTML =data.CountData;
-                   document.getElementById("CountShow").innerHTML = data.lstPriceServicesDTO.length;
-                   Render_Dash_Master_Price_Services("dtContentPriceServicesBody",data.lstPriceServicesDTO);
-                }
-            })
+    function LoadDataPriceServices(){
+         $("#DashPriceServices").html('');
+          $("#DashPriceServices").load("@Url.Action("PriceServices","Settings")");
        };
-    function Render_Dash_Master_Price_Services(id,data){
-        let myNode = document.getElementById(id);
-        let idSumCoun="Dash_SumCountPrice";
-        if (myNode != null) {
-            myNode.innerHTML = '';
-            let stringContent = '';
-            let sumPrice=0;
-            if (data && data.length > 0) {
-                for (let i = 0; i < data.length; i++) {
-                    let item = data[i];
-                    sumPrice=sumPrice+parseInt(item.Price);
-                    let tr =
-                        '<td class="d-none">' + item.CodeServices + '</td>'
-                        + '<td class="vt-number-order"></td>'
-                        + '<td>'
-                        + '<div class="icon icon-shape icon-sm me-2 text-center" >'
-                        + '<img class="avatar m-2" src="./Assets/img/'+item.Images+'" alt="label-image">'
-                        + '</div>'
-                        +'</td>'
-                        + '<td><a href="#" class="ms-3 my-auto text-bold">' + item.Name + '</a></td>'
-                        + '<td class="text-sm text-dark">' + item.Price + ' VNĐ</td>'
-                        + '<td data-name="date" class="text-sm text-dark">' + yyyyMMddHHMMM_ddMMyyyy(item.CreateDate) + '</td>'
-                        +'<td data-name="is_show_app">'
-                    stringContent = stringContent + '<tr class="vt-number" role="row">' + tr + '</tr>';
-                }
-            }
-            if (document.getElementById(idSumCoun).hasAttribute("countTo")) {
-                     document.getElementById(idSumCoun).setAttribute("countTo", sumPrice);
-                     DashMasterCountUpNumber(idSumCoun);
-             };
-            document.getElementById(id).innerHTML = stringContent;
-        }
-    };
 </script>
 
 <style>
