--- a/TrinhTest/Pages/Login/Login.cshtml
+++ b/TrinhTest/Pages/Login/Login.cshtml
@@ -40,6 +40,12 @@
         button.disabed {
             pointer-events: none;
         }
+
+        .bntAuthor:hover {
+            color: #fff;
+            transform: translateY(-7px);
+            background-color: rgba(8, 3, 57, 0.9);
+        }
     </style>
 </head>
 <body>
@@ -90,6 +96,11 @@
                                                 <div id="loader" class="spinner-border spinner-border-sm"></div>
                                                 LOGIN
                                             </button>
+                                        </div>
+                                        <div class="my-2 position-relative text-center">
+                                            <p class="text-sm font-weight-bold mb-2 text-secondary text-border d-inline z-index-2 bg-white px-3">
+                                                or
+                                            </p>
                                         </div>
                                         <div class="col-12 mt-3">
                                             <div class="row">
@@ -205,7 +216,6 @@
             contentType: 'application/json; charset=utf-8',
             success: function (data, textStatus, xhr) {
                     if(data!== "[]" && data !== undefined){
-                        notiSuccess();
                         window.location.href="/Dash/Dash_Master";
                     }
                     else{validateLogin();};
@@ -225,12 +235,9 @@
         $.ajax({url: '/api/Author/login',
                 type: 'POST',
                 data: JSON.stringify({
-                'menu': "1",
-                'IDMenu': "1",
                 'flags': "0",
                 'userID': $('#username').val(),
-                'PassWord':$('#password').val(),
-                'PassWordNew': "123"
+                'PassWord':$('#password').val()
             }),
             contentType: 'application/json; charset=utf-8',
             success: function (data, textStatus, xhr) {
@@ -240,9 +247,8 @@
                             localStorage.setItem("X-PublicKey",res.PublicKey);
                             localStorage.setItem("X-UserID",$('#username').val());
                             localStorage.setItem("X-Access-Token",res.token);
-                            notiSuccess();
                             window.location.href="/Dash/Dash_Master";
-                        };
+                        } else {notiError_SW()};
                 },
                 error: function (xhr, textStatus, errorThrown) {
                     notiError_SW();
